syntax = "proto3";

package wearable.v1;

option go_package = "github.com/luchanos/grpc_app/gen/go/v1;wearable";

service WearableService {
  rpc BeatsPerMinute(BeatsPerMinuteRequest) returns (stream BeatsPerMinuteResponse) {};
}

message BeatsPerMinuteRequest {
  string uuid = 1;
}

message BeatsPerMinuteResponse {
  uint32 value = 1;
  uint32 minute = 2;
}